k3s/generated_manifests/matter-server/Namespace-matter-server.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  name: matter-server
