k3s/generated_manifests/matter-server/Deployment-matter-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matter-server
  namespace: matter-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: matter-server
  template:
    metadata:
      labels:
        app: matter-server
    spec:
      containers:
        - args:
            - --storage-path
            - /data
            - --port
            - "5580"
            - --paa-root-cert-dir
            - /paa-root-certs
          image: ghcr.io/home-assistant-libs/python-matter-server:8.1.0
          name: matter-server
          ports:
            - containerPort: 5580
          volumeMounts:
            - mountPath: /data
              name: data
            - mountPath: /paa-root-certs
              name: paa-certs
      nodeSelector:
        environment: zigbee
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: matter-server-data
        - name: paa-certs
          persistentVolumeClaim:
            claimName: matter-server-paa-certs-data
