k3s/generated_manifests/matter-server/NetworkPolicy-matter-server.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: matter-server
  namespace: matter-server
spec:
  egress:
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
      to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: home-assistant
      ports:
        - port: 5580
          protocol: TCP
  podSelector:
    matchLabels:
      app: matter-server
  policyTypes:
    - Ingress
    - Egress
