k3s/generated_manifests/matter-server/NetworkPolicy-paa-cert-fetcher.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: paa-cert-fetcher
  namespace: matter-server
spec:
  egress:
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
      to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
    - ports:
        - port: 443
          protocol: TCP
      to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
  podSelector:
    matchLabels:
      app: paa-cert-fetcher
  policyTypes:
    - Egress
